# cbsyst

./: .gitignore  .travis.yml  CONTRIBUTING.md  HISTORY.rst  MANIFEST.in  README.md  TODO.md  TODO.rst  makefile  requirements.txt  setup.cfg  setup.py  test_MyAMI_V2.py  test_MyAMI_crosscheck.py  test_cbsyst.py
.github/workflows/: tests.yml
cbsyst/: Bunch.py  MyAMI_V2.py  __init__.py  boron.py  boron_fns.py  boron_isotopes.py  carbon.py  carbon_fns.py  cbsyst.py  classes.py  constants.py  helpers.py  non_MyAMI_constants.py
cbsyst/CO2SYS/: CO2SYS.m
cbsyst/MyAMI/: Kgen.py  __init__.py  approx.py  calc.py  helpers.py  params.py  pitzer.py
cbsyst/MyAMI/parameters/: Fcorr_approx.json  TabA1.csv  TabA10.csv  TabA11.csv  TabA2.csv  TabA3.csv  TabA4.csv  TabA8.csv  gen_params.py  phi_bases.json  pitzer_params.json  theta_bases.json
cbsyst/coefficients/: pressure.csv
cbsyst/constants/: K_functions.py  __init__.py  calc.py  functional_forms.py
cbsyst/test_data/GLODAP_data/: get_GLODAP_data.py  plot_GLODAPv2_comparison.py
cbsyst/test_data/Orr2015/: get_GLODAP_WOA_data.py  plot_CO2SYS_comparison.py
test/: test_MyAMI_V2.py  test_MyAMI_crosscheck.py  test_cbsyst.py
test/data/: MyAMI_V1_Fcorr_checkvals.csv
tests/: check_vals.py  test_boron.py  test_boron_isotopes.py  test_carbon.py  test_cbsyst.py  test_in_out.py  test_palaeoB.py
tests/test_data/GLODAP_data/: GLODAPv2_headers.txt  get_GLODAP_data.py  plot_GLODAPv2_comparison.py
tests/test_data/Lueker2000/: Lueker2000_Table2.csv  Lueker2000_Table3.csv
