[metadata]
name = cbsyst
version = attr: cbsyst.VERSION
author = Oscar Branson
author_email = ob266@cam.ac.uk
description = Tools for calculating ocean C and B chemistry.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oscarbranson/cbsyst
license = MIT
classifiers =
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Science/Research
keywords = science, chemistry, oceanography, carbon

[options]
zip_safe = True
include_package_data  = True

[options.package_data]
cbsyst = test_data/GLODAP_data/*.py, test_data/Lueker2000/*.csv

[options.exclude_package_data]
cbsyst = test_data/*.zip