[metadata]
name = cbsyst
version = attr: cbsyst.VERSION
author = Oscar Branson
author_email = ob266@cam.ac.uk
description = Tools for calculating ocean C and B chemistry.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oscarbranson/cbsyst
license = MIT
classifiers =
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Science/Research
keywords = science, chemistry, oceanography, carbon

[options]
zip_safe = True
include_package_data  = True
install_requires =
    numpy >=1.13
    scipy >=0.18
    pandas >=0.19
    uncertainties >=3.0
    tqdm >=4.14
    kgen >=0.2.0
python_requires = >=3.7
packages = find:

[options.package_data]
cbsyst = test_data/GLODAP_data/*.py, test_data/Lueker2000/*.csv

[options.exclude_package_data]
cbsyst = test_data/*.zip